Fix | overflow details on rental table mobile

--- a/src/components/Title/title.css
+++ b/src/components/Title/title.css
@@ -6,6 +6,7 @@
 
 @media only screen and (max-width: 570px) {
     .title {
-        font-size: 26px;
+        font-size: 23px;
+        margin-left: 10px;
     }
 }
