--- a/src/pages/rental/rental.css
+++ b/src/pages/rental/rental.css
@@ -4,7 +4,7 @@
 }
 
 .rental_table {
-    margin-top: 1em;
+    margin-top: 2em;
 }
 
 .rental_header {
@@ -104,7 +104,16 @@
         font-size: 10px;
     }
     .rental_header-button {
-        height: 31px;
+        height: 60%;
         font-size: 12px;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .rental_container {
+        width: 97%;
+    }
+    .rental_header {
+        width: 95%;
     }
 }
